--- a/templates/ocr.html
+++ b/templates/ocr.html
@@ -10,40 +10,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
-        <a class="navbar-brand" href="{{url_for('home')}}">SnapTrack</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="markAttendanceDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Mark Attendance
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="markAttendanceDropdown">
-                        <a class="dropdown-item" href="{{url_for('teacher_dashboard')}}">Using QR Code</a>
-                        <a class="dropdown-item" href="{{url_for('attendance')}}">Using OCR</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('user_profile')}}">Profiles</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="moreOptionsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        More
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="moreOptionsDropdown">
-                        <a class="dropdown-item" href="{{url_for('update_profile')}}">Add or remove subject</a>
-                        <a class="dropdown-item" href="#">Upload Attendance sheet</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{url_for('logout')}}">Log Out</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    {% include "navbar.html" %}
     <div class="container">
         <h1>OCR Roll Number Extractor</h1>
     
