--- a/templates/student.html
+++ b/templates/student.html
@@ -28,7 +28,7 @@
                     <button id="start-camera"> Camera</button>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{url_for('logout')}}">Log Out</a>
+                    <a class="nav-link" href="{{url_for('logout_student')}}">Log Out</a>
                 </li>
             </ul>
         </div>
