--- a/templates/student.html
+++ b/templates/student.html
@@ -39,6 +39,9 @@
             <div class="col">
                 <div class="content">
                     <h1>Welcome to SnapTrack</h1>
+                    {%if msg%}
+                    <p style="color:red;"> {{msg}} </p>
+                    {%endif%}
                     <div id="reader" style="width: 300px; height: 300px; display: none;"></div>
                     <!-- Other content goes here -->
                 </div>
