--- a/templates/update_profile.html
+++ b/templates/update_profile.html
@@ -5,24 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Update Profile</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{url_for('static', filename='/ocr.css')}}">
     <link rel="icon" type="image/svg+xml" href="{{url_for('static', filename='images/logo.svg')}}">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+    background-image: url(../static/images/img.jpeg); 
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-color: #f8f9fa; /* Fallback color */
+    font-family: 'Open Sans', sans-serif; /* Set default font */
+    color: #fff; /* Set default text color */
+}
+        .form{
+            margin:auto;
+            width:30%;
         }
 
         form {
-            max-width: 400px;
-            padding: 20px;
+            max-width: 460px;
+            padding: 5px;
             background-color: #fff;
-            border-radius: 8px;
+            border-radius: 6px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
@@ -70,29 +76,29 @@
     </style>
 </head>
 <body>
-    <form method="POST" action="/update_profile">
-        {{msg}}
-        <h2>Update Your Subject</h2>
-
-        <label for="year">Year:</label>
-        <input type="text" name="year" value="{{ data.year }}" required>
-
-        <label for="year">Branch:</label>
-        <input type="text" name="branch" value="{{ data.branch }}" required>
-
-        <label for="subject">Subject:</label>
-        <input type="text" name="subject" value="{{ data.subject }}" required>
-
-        <label for="sem">Semester:</label>
-        <input type="text" name="sem" value="{{ data.sem }}" required>
-
-        <input type="submit" name="action" value="Update">
-        <input type="submit" name="action" value="Delete" onclick="return confirm('Are you sure you want to delete?')">
-        <input type="submit" name="action" value="Add">
-        <div class="back-link">
-            <center><a href="{{url_for('home')}}">Back to Home</a> </center>
-        </div>
-    </form>
+    {% include "navbar.html" %}
+    <div  class="form">
+        <form method="POST" action="/update_profile">
+            {{msg}}
+            <h2>Update Your Subject</h2>
+    
+            <label for="year">Year:</label>
+            <input type="text" name="year" value="{{ data.year }}" required>
+    
+            <label for="year">Branch:</label>
+            <input type="text" name="branch" value="{{ data.branch }}" required>
+    
+            <label for="subject">Subject:</label>
+            <input type="text" name="subject" value="{{ data.subject }}" required>
+    
+            <label for="sem">Semester:</label>
+            <input type="text" name="sem" value="{{ data.sem }}" required>
+    
+            <input type="submit" name="action" value="Update">
+            <input type="submit" name="action" value="Delete" onclick="return confirm('Are you sure you want to delete?')">
+            <input type="submit" name="action" value="Add">
+        </form>    
+    </div>
     
 </body>
 </html>
